ipc/ipdl/test/ipdl/error/compressCtorManagee.ipdl
include protocol compressCtor;

intr protocol compressCtorManagee {
    manager compressCtor;

child:
    async __delete__() compress;
};
